@@ -9,8 +9,8 @@
 
 & sharpf sharpc 4_4
 cg ^ts B_2	B_8 ^te	C_4	D_8	!
-cg ^ts B_4	B_16 ^te	^ts C_4	C_16 ^te	D_8	!
+LA_4	cg ^ts B_4	B_16 ^te	^ts C_4	C_16 ^te	D_8	!
 B_4	C_4	D_4	^ts E_4	!
 E_1 ^te	!
-ag ^3s LGr_8	LAl_8	Bl_8 ^3e	^3s Cr_8	dg Cr_8	eg Cl_8 ^3e	!t
+ag ^3s LGr_8	LAl_8	Bl_8 ^3e	^3s Cr_8	dg Cr_8	eg Cl_8 ^3e	D_2	!t
 !I
