@@ -1,3 +1,5 @@
+12.sep (lv)
+      - #5637 support reading bww files: irregular measures
 10.sep (ws)
       - start port of kde oxygen style to make it available for
         windows
